// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`update-media-type should handle non-existent media type 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"Not Found","status":404,"detail":"The specified media type was not found","operationStatus":"NotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`update-media-type should update a media type 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;
